Fix letter text alignment - change from center to left

--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ body {
     color: #2c2c2c;
     line-height: 1.8;
     margin-bottom: 30px;
-    text-align: center;
+    text-align: left;
 }
 
 .letter-closing {
